--- a/jstyle.css
+++ b/jstyle.css
@@ -17,9 +17,10 @@ h1{
     color: white;
     justify-content: center;
     font-family: 'Playfair Display', serif;
-    font-size: 100px;
+    font-size: 6rem;
     display: flex;
     margin: 0;
+    
 }
 form{
     display: flex;
@@ -32,11 +33,11 @@ hr{
 }
 table{
     z-index: 1;
-    position: absolute;
+    position: relative;
     left: 25%;
     border: orange 1px solid;
     width: 50%;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 td{
     border: orange 1px solid;
@@ -44,6 +45,24 @@ td{
     color: white;
     padding: 10px;
 }
+th{
+    border: solid orange 1px;
+    border-top: none;
+}
 label{
     padding: 10px;
+}
+p{
+    text-align: center;
+    margin: 0;
+    color: rgb(255, 153, 0);
+}
+a{
+    text-decoration: none;
+    color:rgb(0, 255, 242); 
+    transition: ease-in .4s;
+}
+a:hover{
+    font-size: xx-large;
+    transition: ease-in .4s;
 }
